# liblbx

./: CMakeLists.txt  README.md
doc/: class-diagram.uxf  lbx-format.tex
src/: lbx.cpp  lbx.h  test.cpp
